// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`glam react babel glam component basic 1`] = `"emotion(\\"h1\\", ['css-8xpzga', [fontSize]]);"`;

exports[`glam react babel glam component function call 1`] = `"emotion(MyComponent, ['css-8xpzga', [fontSize]]);"`;

exports[`glam react basic render 1`] = `
<h1
  className=" css-13wdnau vars-nujrf4"
>
  hello world
</h1>
`;

exports[`glam react call expression 1`] = `
<h1
  className="legacy__class css-13wdnau vars-nujrf4"
>
  hello world
</h1>
`;

exports[`glam react composition 1`] = `
<h1
  className="legacy__class css-vxb7tq vars-3na0zv css-13wdnau vars-nujrf4"
>
  hello world
</h1>
`;

exports[`glam react function in expression 1`] = `
<h1
  className="legacy__class css-vxb7tq vars-prycnx css-13wdnau vars-nujrf4"
  scale={2}
>
  hello world
</h1>
`;

exports[`glam react higher order component 1`] = `
<div
  className=" css-o7j1h0 css-13wdnau vars-nujrf4"
>
  <div
    className="css-1l3rx1p"
  />
  <div
    className="css-1l3rx1p"
  />
  <div
    className="css-1l3rx1p"
  />
  <div
    className="css-1l3rx1p"
  />
</div>
`;
